<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plutus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="title_activity_user_main">Home</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Log out</string>
    <string name="action_db_admin_login">DB Admin</string>
    <string name="title_activity_view_account_balance">Account Balance</string>
    <string name="intent_key">com.example.plutus</string>
    <string name="button_login">Login</string>
    <string name="button_view_account_balance">View Account Balance</string>
    <string name="button_view_account_statistic">View Account Statistics</string>
    <string name="button_update_account_setting">Update Account Settings</string>
    <string name="title_activity_view_account_statistics">Account Statistics</string>
    <string name="title_activity_update_account_setting">Update Account</string>
    <string name="content_img">Plutus Logo</string>
    <string name="bkgd_img">Background Image</string>
    <string name="acnt_sum">Account Summary: </string>
    <string name="alrt_set">Alerts Set:</string>
    <string name="dst_thres">Distance From Threshold:</string>
    <string name="trns_title">Transactions</string>
    <string name="dash_txt">Dashboard:</string>
    <string name="tot_funds_elips">................... Total Funds</string>
    <string name="tot_spend_elips">................... Total Spent</string>
    <string name="alert_txt">Alerts:</string>
    <string name="navg_text">Navigation:</string>
    <string name="acnts_txt">Accounts:</string>
    <string name="sav_acnts_txt">Savings Account</string>
    <string name="tot_bal_elips">................... Balance</string>
    <string name="tot_spent_elips">................... Spending</string>
    <string name="thresh_txt">Threshold: </string>
    <string name="check_acnt_txt">Checking Account</string>
    <string name="acnt_inf_txt">Account Info:</string>
    <string name="phone_txt">Phone:</string>
    <string name="pwd_txt">Password:</string>
    <string name="email_txt">Email:</string>
    <string name="pie_txt">Pie Chart</string>
    <string name="title_activity_bank_database_simulation">BankDatabaseSimulationActivity</string>
    <string name="button_simulate">Simulate</string>
    <string name="button_test_update">Test Update</string>
    <string name="button_test_retrieval">Test Retrieval</string>
    <string name="cmd_txt">Enter a Command</string>
    <string name="spch_dis">Disable Speech</string>

</resources> <!-- We will change the title for each activity -->
