<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.plutus.LoginActivity"
    tools:ignore="MergeRootFrame" >
    
    <ImageView 
     android:contentDescription="@string/bkgd_img"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:src="@drawable/bkgd"
     android:scaleType="centerCrop" />
    
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin" >

	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:contentDescription="@string/content_img"
	        android:src="@drawable/plutuslogo600" />
	
	    <EditText
	        android:id="@+id/edit_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/edit_uername"
	        android:layout_alignRight="@+id/edit_uername"
	        android:layout_below="@+id/edit_uername"
	        android:layout_marginTop="33dp"
	        android:background="@drawable/abc_textfield_searchview_holo_light"
	        android:ems="10"
	        android:hint="@string/edit_password"
	        android:inputType="textPassword" />
    
	    <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@android:color/transparent"
		    android:onClick="loginUserMainActivity"
		    android:layout_marginTop="24dp"
		    android:layout_below="@+id/edit_password"
		    android:layout_centerHorizontal="true" >
	  
		   <ImageView 
			android:contentDescription="@string/bkgd_img"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/lstitem"
			android:scaleType="fitXY" />
		
			<TextView
		    android:id="@+id/login_item_tv"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:text="@string/button_login"
		    android:textColor="@color/txt_col"
		    android:textSize="24sp" />
	
		</RelativeLayout>
	
	    <EditText
	        android:id="@+id/edit_uername"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/imageView1"
	        android:layout_alignRight="@+id/imageView1"
	        android:layout_below="@+id/imageView1"
	        android:layout_marginTop="24dp"
	        android:background="@drawable/abc_textfield_searchview_holo_light"
	        android:ems="10"
	        android:hint="@string/edit_username" >
	        <requestFocus />
	    </EditText>

</RelativeLayout>
    
</FrameLayout>
