<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

 	<TextView
     android:id="@+id/menu_dshbrd_tv"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:text="@string/dash_txt"
     android:textColor="@color/txt_col"
     android:textSize="24sp" />

   <RelativeLayout 
 	android:id="@+id/menu_sav_sum_rl"
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
   	android:layout_below="@+id/menu_dshbrd_tv" >
	
	    <ImageView 
		android:contentDescription="@string/bkgd_img"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/lstitem"
		android:scaleType="fitXY" />
	       
       <TextView
        android:id="@+id/menu_sav_sum_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/sav_acnts_txt"
        android:textColor="@color/txt_col"
        android:textSize="24sp" />

       <TextView
        android:id="@+id/menu_sav_sum_fnd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/menu_sav_sum_amnt_tv"
        android:layout_alignBottom="@+id/menu_sav_sum_amnt_tv"
        android:layout_alignRight="@+id/menu_sav_sum_title_tv"
        android:layout_toRightOf="@+id/menu_sav_sum_amnt_tv"
        android:textColor="@color/fade_col"
        android:textSize="18sp"
        android:text="@string/tot_bal_elips" />

       <TextView
        android:id="@+id/menu_sav_sum_expns_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_below="@+id/menu_sav_sum_amnt_tv"
        android:textColor="@color/red_txt"
        android:textSize="18sp"
        android:text="" />

       <TextView
        android:id="@+id/menu_sav_sum_expnst_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_sav_sum_fnd_tv"
        android:layout_alignRight="@+id/menu_sav_sum_fnd_tv"
        android:layout_below="@+id/menu_sav_sum_fnd_tv"
        android:textColor="@color/fade_col"
        android:textSize="18sp"
        android:text="@string/tot_spent_elips" />

       <TextView
        android:id="@+id/menu_sav_sum_amnt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_below="@+id/menu_sav_sum_title_tv"
        android:text=""
        android:textColor="@color/grn_txt"
        android:textSize="18sp" />
   </RelativeLayout>
   
   <RelativeLayout 
    android:id="@+id/menu_chk_sum_rl"
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
   	android:layout_below="@+id/menu_sav_sum_rl" >
	
	    <ImageView 
		android:contentDescription="@string/bkgd_img"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/lstitem"
		android:scaleType="fitXY" />
	       
       <TextView
        android:id="@+id/menu_chk_sum_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/check_acnt_txt"
        android:textColor="@color/txt_col"
        android:textSize="24sp" />

       <TextView
        android:id="@+id/menu_chk_sum_fnd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/menu_chk_sum_amnt_tv"
        android:layout_alignBottom="@+id/menu_chk_sum_amnt_tv"
        android:layout_alignRight="@+id/menu_chk_sum_title_tv"
        android:layout_toRightOf="@+id/menu_chk_sum_amnt_tv"
        android:textColor="@color/fade_col"
        android:textSize="18sp"
        android:text="@string/tot_bal_elips" />

       <TextView
        android:id="@+id/menu_chk_sum_expns_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_below="@+id/menu_chk_sum_amnt_tv"
        android:textColor="@color/red_txt"
        android:textSize="18sp"
        android:text="" />

       <TextView
        android:id="@+id/menu_chk_sum_expnst_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_chk_sum_fnd_tv"
        android:layout_alignRight="@+id/menu_chk_sum_fnd_tv"
        android:layout_below="@+id/menu_chk_sum_fnd_tv"
        android:textColor="@color/fade_col"
        android:textSize="18sp"
        android:text="@string/tot_spent_elips" />

       <TextView
        android:id="@+id/menu_chk_sum_amnt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_below="@+id/menu_chk_sum_title_tv"
        android:text=""
        android:textColor="@color/grn_txt"
        android:textSize="18sp" />
   </RelativeLayout>
	
	<RelativeLayout 
	 android:id="@+id/menu_alrt_rl"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:background="@android:color/transparent"
	 android:layout_below="@+id/menu_chk_sum_rl" >
	
		<ImageView 
		android:contentDescription="@string/bkgd_img"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/lstitem"
		android:scaleType="fitXY" />
	  
       <TextView
        android:id="@+id/menu_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/alert_txt"
        android:textColor="@color/txt_col"
        android:textSize="24sp" />

       <TextView
        android:id="@+id/menu_alert_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text=""
        android:textColor="@color/red_txt"
        android:textSize="24sp" />
	
	</RelativeLayout>
	
	
	<RelativeLayout 
	 android:id="@+id/menu_prog_rl"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:background="@android:color/transparent"
	 android:layout_below="@+id/menu_alrt_rl" >
	
		<ImageView 
		android:contentDescription="@string/bkgd_img"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/lstitem"
		android:scaleType="fitXY" />
	  
       <TextView
        android:id="@+id/menu_prog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/thresh_txt"
        android:textColor="@color/txt_col"
        android:textSize="24sp" />
       
      <ProgressBar
         android:id="@+id/menu_prog_pb"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:progress="50" />


	
	</RelativeLayout>
</RelativeLayout>
    
