<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.plutus.ViewAccountBalanceActivity"
    tools:ignore="MergeRootFrame" >
    
	<ImageView 
		android:contentDescription="@string/bkgd_img"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:src="@drawable/bkgd"
		android:scaleType="centerCrop" />
	
	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	    <TextView
	        android:id="@+id/ab_tv1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/acnts_txt"
	        android:textColor="@color/txt_col"
		    android:textSize="24sp" />
	    
	    <FrameLayout 
		 android:id="@+id/acnt_top_fl"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:background="@android:color/transparent"
		 android:layout_below="@+id/ab_tv1"
		 android:onClick="loadSavingTransHistory" >
		  
		   <ImageView 
			android:contentDescription="@string/bkgd_img"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:src="@drawable/lstitem"
			android:scaleType="fitXY" />
		    
		   <RelativeLayout 
		       	android:id="@+id/acnt_sum_rl"
		    	android:layout_width="match_parent"
		    	android:layout_height="match_parent" >
		
		       <TextView
		        android:id="@+id/acnt_title_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="30dp"
		        android:layout_marginRight="30dp"
		        android:text="@string/sav_acnts_txt"
		        android:textColor="@color/txt_col"
		        android:textSize="24sp" />
		
		       <TextView
		        android:id="@+id/acnt_fnds_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/acnt_amnt_tv"
		        android:layout_alignBottom="@+id/acnt_amnt_tv"
		        android:layout_alignRight="@+id/acnt_title_tv"
		        android:layout_toRightOf="@+id/acnt_amnt_tv"
		        android:textColor="@color/fade_col"
		        android:textSize="16sp"
		        android:text="@string/tot_bal_elips" />
		
		       <TextView
		        android:id="@+id/acnt_expns_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="24dp"
		        android:layout_below="@+id/acnt_amnt_tv"
		        android:textColor="@color/red_txt"
		        android:textSize="16sp"
		        android:text="" />
		
		       <TextView
		        android:id="@+id/acnt_expnst_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/acnt_fnds_tv"
		        android:layout_alignRight="@+id/acnt_fnds_tv"
		        android:layout_below="@+id/acnt_fnds_tv"
		        android:textColor="@color/fade_col"
		        android:textSize="16sp"
		        android:text="@string/tot_spent_elips" />
		
		       <TextView
		        android:id="@+id/acnt_amnt_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="24dp"
		        android:layout_below="@+id/acnt_title_tv"
		        android:text=""
		        android:textColor="@color/grn_txt"
		        android:textSize="16sp" />
		   </RelativeLayout>
		</FrameLayout>
		
	    <RelativeLayout 
		 android:id="@+id/acnt_2nd_fl"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:background="@android:color/transparent"
		 android:layout_below="@+id/acnt_top_fl" >
		
		<ImageView 
			android:contentDescription="@string/bkgd_img"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/lstitem"
			android:scaleType="fitXY" />
		    
		  
	       <TextView
	        android:id="@+id/acnt_rate_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:text="@string/thresh_txt"
	        android:textColor="@color/txt_col"
	        android:textSize="24sp" />
	
	      <ProgressBar
	         android:id="@+id/acnt_thresh_pb"
	         style="?android:attr/progressBarStyleHorizontal"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:layout_marginLeft="30dp"
	         android:layout_marginRight="30dp"
	         android:progress="50"
	         android:textColor="@color/red_txt"
	         android:textSize="24sp" />
		
		</RelativeLayout>
		
	    <FrameLayout 
		 android:id="@+id/acnt_btm_fl"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:background="@android:color/transparent"
		 android:layout_below="@+id/acnt_2nd_fl"
		 android:onClick="loadCheckTransHistory" >
		  
		   <ImageView 
			android:contentDescription="@string/bkgd_img"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:src="@drawable/lstitem"
			android:scaleType="fitXY" />
		    
		   <RelativeLayout 
		       	android:id="@+id/acnt_sum_rl2"
		    	android:layout_width="match_parent"
		    	android:layout_height="match_parent" >
		
		       <TextView
		        android:id="@+id/acnt_title_tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="30dp"
		        android:layout_marginRight="30dp"
		        android:text="@string/check_acnt_txt"
		        android:textColor="@color/txt_col"
		        android:textSize="24sp" />
		
		       <TextView
		        android:id="@+id/acnt_fnds_tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/acnt_amnt_tv2"
		        android:layout_alignBottom="@+id/acnt_amnt_tv2"
		        android:layout_alignRight="@+id/acnt_title_tv2"
		        android:layout_toRightOf="@+id/acnt_amnt_tv2"
		        android:textColor="@color/fade_col"
		        android:textSize="16sp"
		        android:text="@string/tot_bal_elips" />
		
		       <TextView
		        android:id="@+id/acnt_expns_tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="24dp"
		        android:layout_below="@+id/acnt_amnt_tv2"
		        android:textColor="@color/red_txt"
		        android:textSize="16sp"
		        android:text="" />
		
		       <TextView
		        android:id="@+id/acnt_expnst_tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/acnt_fnds_tv2"
		        android:layout_alignRight="@+id/acnt_fnds_tv2"
		        android:layout_below="@+id/acnt_fnds_tv2"
		        android:textColor="@color/fade_col"
		        android:textSize="16sp"
		        android:text="@string/tot_spent_elips" />
		
		       <TextView
		        android:id="@+id/acnt_amnt_tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="24dp"
		        android:layout_below="@+id/acnt_title_tv2"
		        android:text=""
		        android:textColor="@color/grn_txt"
		        android:textSize="16sp" />
		   </RelativeLayout>
		</FrameLayout>
		
	    <RelativeLayout 
		 android:id="@+id/acnt_3rd_rl"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:background="@android:color/transparent"
		 android:layout_below="@+id/acnt_btm_fl" >
		
		<ImageView 
			android:contentDescription="@string/bkgd_img"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/lstitem"
			android:scaleType="fitXY" />
		    
		  
	       <TextView
	        android:id="@+id/acnt_rate_tv2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:text="@string/thresh_txt"
	        android:textColor="@color/txt_col"
	        android:textSize="24sp" />
	
	      <ProgressBar
	         android:id="@+id/acnt_thresh_pb2"
	         style="?android:attr/progressBarStyleHorizontal"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:layout_marginLeft="30dp"
	         android:layout_marginRight="30dp"
	         android:progress="50"
	         android:textColor="@color/red_txt"
	         android:textSize="24sp" />
		
		</RelativeLayout>


	</RelativeLayout>
	
    
</FrameLayout>
